polish: Druidic Ritual (#2339)
* reformat: modernize

* nit: update druid circle text to match map

* fix: quest start dialog highlight

* fix: add step to climb down from sanfew when prompted to enter dungeon

* test: opt into sidebar test

* helper javadoc

* fix: document where the raw meat can be acquired

this is not the only place, but it's a place where all meats can be acquired

* nit: simplify highlighted-version creation

* Final polish

Adds a specific door step, with a little bit of an explanation for why we spam click

Reorders the meat requirement lists to match the "good varrock kill animals" route